# rust-prac

diesel-playground/diesel-sqlite/: Cargo.toml
diesel-playground/diesel-sqlite/db/: articles_seed.sql  users_seed.sql
diesel-playground/diesel-sqlite/examples/: insert.rs  select.rs  update.rs
diesel-playground/diesel-sqlite/migrations/2025-12-07-101412-0000_create_posts/: up.sql
diesel-playground/diesel-sqlite/migrations/2025-12-12-082635-0000_create_users/: up.sql
diesel-playground/diesel-sqlite/migrations/2025-12-14-081558-0000_create_articles/: down.sql  up.sql
diesel-playground/diesel-sqlite/migrations/2025-12-17-070425-0000_add_defaults_to_users/: down.sql  up.sql
diesel-playground/diesel-sqlite/src/: lib.rs  models.rs  schema.rs
rust-basics/: Cargo.toml
rust-basics/basics/: Cargo.toml
rust-basics/basics/examples/: enum.rs  mod_samples_runner.rs  mod_test_runner.rs  runner.rs  scoping_rules.rs  std_types.rs
rust-basics/basics/examples/async_and_future/: basic_examples.rs  mod.rs  runner.rs  web_scraper.rs
rust-basics/basics/examples/closures/: mod.rs  runner.rs
rust-basics/basics/examples/concurrency/: mod.rs  runner.rs  threads_basic.rs
rust-basics/basics/examples/conversion_and_expressions/: conversion_examples.rs  expressions.rs  mod.rs  runner.rs
rust-basics/basics/examples/crates_and_cargo/: library.rlib  mod.rs  rary.rs  runner.rs
rust-basics/basics/examples/custom_types/: constants.rs  enums_demo.rs  linked_list.rs  mod.rs  runner.rs  structs_demo.rs
rust-basics/basics/examples/enums/: linked_list.rs  mod.rs  runner.rs
rust-basics/basics/examples/error_handling/: combinators.rs  hello.txt  iterating_results.rs  mod.rs  multiple_error_types.rs  option.rs  recoverable_errors.rs  result.rs  runner.rs  unrecoverable_errors.rs
rust-basics/basics/examples/flow_of_control/: conditionals.rs  let_examples.rs  loops.rs  mod.rs  runner.rs
rust-basics/basics/examples/functions/: closure_capturing.rs  closure_examples_std.rs  closure_with_functions.rs  functions_and_methods.rs  hof_and_diverging.rs  mod.rs  runner.rs
rust-basics/basics/examples/generics/: associated_items.rs  basic_examples.rs  bounds.rs  mod.rs  phantom.rs  runner.rs  where_and_newtype.rs
rust-basics/basics/examples/library_demo/: Cargo.toml
rust-basics/basics/examples/macro_rules/: basic_examples.rs  binary_operators.rs  dsls.rs  mod.rs  runner.rs
rust-basics/basics/examples/mod_samples/: mod.rs  mod_basic.rs  runner.rs
rust-basics/basics/examples/modules/: mod.rs  mod_examples.rs  mod_functions.rs  mod_nested.rs  runner.rs  visibility.rs
rust-basics/basics/examples/ownership/: borrowing.rs  copy_types.rs  mod.rs  owned_types.rs  runner.rs
rust-basics/basics/examples/primitives/: arrays_and_slices.rs  mod.rs  runner.rs  tuples_demo.rs
rust-basics/basics/examples/scoping_rules/: bounds_and_coercion.rs  functions_and_methods.rs  lifetimes.rs  mod.rs  ownership_and_moves.rs  raii.rs  runner.rs  structs_and_traits.rs
rust-basics/basics/examples/smart_pointers/: box_demo.rs  mod.rs  runner.rs
rust-basics/basics/examples/std_library_types/: hashmap.rs  iteration.rs  mod.rs  option_and_result.rs  rc_and_arc.rs  runner.rs  string_examples.rs  vectors.rs
rust-basics/basics/examples/std_misc/: channels.rs  child_processes.rs  ffi.rs  file_io.rs  filesystem_operations.rs  mod.rs  path_examples.rs  program_arguments.rs  runner.rs  threads.rs
rust-basics/basics/examples/structs/: mod.rs  runner.rs  structs.rs
rust-basics/basics/examples/testing/: mod.rs  runner.rs  unit_testing.rs
rust-basics/basics/examples/traits/: animal.rs  anonymous_animal.rs  binary_operators.rs  clone_and_overlapping.rs  derive.rs  drop.rs  iterators.rs  mod.rs  runner.rs  supertraits.rs  traits.rs
rust-basics/basics/examples/variables_and_types/: mod.rs  runner.rs  type_examples.rs  variable_bindings.rs
rust-basics/basics/src/: lib.rs  main.rs
rust-basics/basics/src/commands/: json_io.rs  mod.rs
rust-basics/basics/src/rust_lang/: advanced_features.rs  (+22 more)
rust-basics/basics/tests/: dev_dependencies_test.rs  integration_test.rs
rust-basics/concepts/: Cargo.toml
rust-basics/examples/: enum.rs  structs.rs
rust-basics/examples/enums/: example_enums.rs  mod.rs
rust-basics/src/: main.rs  utils.rs
rust-basics/utils/src/: lib.rs
rust-libs-practice/axum-basics/: Cargo.toml
rust-libs-practice/axum-basics/src/: main.rs
rust-libs-practice/seaorm-demo/seaorm-app/: Cargo.toml
(+128 files in other folders)
