[workspace]
resolver = "3"
members = [
    "basics",
    "concepts",
    "utils",
    "basics/src/rust_lang/packages_crates_modules",
    "basics/src/rust_lang/automated_tests",
    "basics/src/rust_lang/my_crate",
    "basics/src/rust_lang/adder",
    "basics/src/rust_lang/hello_macro",
    "basics/src/rust_lang/hello_macro_derive",
    "basics/src/rust_lang/route_macro",
    "basics/src/rust_lang/sql_macro",
]
