[package]
name = "basics"
version = "0.1.0"
edition = "2024"
default-run = "rust_lang"

[dependencies]
rand = "0.8.5"
utils = { path = "../utils" }
dirs-next = "2.0.0"
trpl = "0.3.0"
library_demo = { path = "examples/library_demo" }
itertools = "0.14.0"
hello_macro = { path = "src/rust_lang/hello_macro" }

[dev-dependencies]
pretty_assertions = "1"
predicates = "3"

[[bin]]
name = "rust_lang"
path = "src/rust_lang/main.rs"
