[package]
name = "concepts"
version = "0.1.0"
edition = "2024"
default-run = "memory"

[dependencies]
futures = "0.3.31"
trpl = "0.3.0"

[[bin]]
name = "core"
path = "src/core/runner.rs"

[[bin]]
name = "concurrency"
path = "src/concurrency/runner.rs"

[[bin]]
name = "ownership"
path = "src/ownership/runner.rs"

[[bin]]
name = "memory"
path = "src/memory/runner.rs"