[package]
name = "axum-basics"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures-util = "0.3.32"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
