[package]
name = "seaorm-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio", "macros", "mock"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
migration = { path = "../migration" }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
chrono = "0.4.44"
